tests/invalid/While_Invalid_1.whiley
import * from whiley.lang.*

void ::main(System.Console sys):
    j=0
    while(j < |args|):
        i = 1
        j = j + 1
    debug Any.toString(i)
